Update Donation 2.0: Bài thực hành 6 19020251

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="paypal">PayPal</string>
     <string name="direct">Direct</string>
     <string name="menuReport">Report</string>
+    <string name="reportTitle">Report</string>
+    <string name="menuDonate">Donate</string>
 </resources>
