--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,6 @@
     <string name="defaultAmount">00</string>
     <string name="defaultMethod">N/A</string>
     <string name="amount">Amount</string>
-    <string name="total">$0</string>
-    <string name="totalSoFar">Total So Far</string>
+    <string name="total">Total So Far</string>
+    <string name="totalSoFar">$ Total</string>
 </resources>
