--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Donation.3.0</string>
+    <string name="app_name">Donation.4.0</string>
     <string name="action_settings">Settings</string>
     <string name="donateTitle">Welcome Homer</string>
     <string name="donateSubtitle">Please Give Generously</string>
@@ -13,5 +13,6 @@
     <string name="defaultMethod">N/A</string>
     <string name="amount">Amount</string>
     <string name="total">Total So Far</string>
-    <string name="totalSoFar">$ Total</string>
+    <string name="totalSoFar">$Total</string>
+    <string name="menuReset">Reset</string>
 </resources>
